--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Collection of opensource editors",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "rm -r ./lib",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
