--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "@types/uuid": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.2.4",
-    "uuid": "^8.3.2"
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -35,6 +34,7 @@
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-xarrows": "^1.7.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "uuid": "^8.3.2"
   }
 }
