--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "elena-editor",
   "version": "0.1.6",
+  "type": "module",
   "description": "Collection of opensource editors",
   "main": "lib/index.js",
   "scripts": {
